# ansible-podman-collections

./: .gitignore  CHANGELOG.rst  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  ansible-collection-containers-podman.spec  bindep.txt  galaxy.yml  galaxy.yml.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  pull_request_template.md  pull_request_template.yml
changelogs/: changelog.yaml  config.yaml
ci/: ansible-2.9.cfg  ansible-dev.cfg  run_connection_test.sh  run_containers_tests.sh
contrib/: README.md  ansible-lint.sh  ansible-unit.sh  build.py  build_docs.sh  build_rpm.sh  publish-requirements.txt  publish.sh
docs/: buildah_connection.html  buildah_containers_inventory.html  connection_plugins.md  environment_variables.html  genindex.html  index.html  objects.inv  podman_connection.html  podman_container_copy_module.html  podman_container_exec_module.html  podman_container_info_module.html  podman_container_module.html  podman_containers_inventory.html  podman_containers_module.html  podman_export_module.html  podman_generate_systemd_module.html  podman_image_info_module.html  podman_image_module.html  podman_import_module.html  podman_load_module.html  podman_login_info_module.html  podman_login_module.html  podman_logout_module.html  podman_network_info_module.html  podman_network_module.html  podman_play_module.html  podman_pod_info_module.html  podman_pod_module.html  podman_prune_module.html  podman_runlabel_module.html  podman_save_module.html  (+9 more)
(+334 files in other folders)
