[metadata]
name = ansible-podman-collections.containers
summary = Ansible collections for Podman
description-file =
    README.md

author = Sagi Shnaidman (@sshnaidm)
author-email = einarum@gmail.com
home-page = https://github.com/containers/ansible-podman-collections/
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/containers/podman/ = README.md
    share/ansible/collections/ansible_collections/containers/podman/roles/ = roles/*
    share/ansible/collections/ansible_collections/containers/podman/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/containers/podman/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/containers/podman/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/containers/podman/docs/ = docs/*
    share/ansible/collections/ansible_collections/containers/podman/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
